--- a/SWD/ica-adventure_async_callbacks/package.json
+++ b/SWD/ica-adventure_async_callbacks/package.json
@@ -10,6 +10,10 @@
   "license": "ISC",
   "dependencies": {
     "express": "^4.16.3",
-    "request": "^2.88.2"
+    "request": "^2.88.2",
+    "require": "^2.4.20"
+  },
+  "devDependencies": {
+    "http-server": "^14.1.1"
   }
 }
