--- a/SWD/assignment_unit_02b/ica-adventure_promises/package.json
+++ b/SWD/assignment_unit_02b/ica-adventure_promises/package.json
@@ -10,6 +10,7 @@
   "license": "ISC",
   "dependencies": {
     "express": "^4.16.3",
-    "node-fetch": "^2.1.2"
+    "node-fetch": "^2.1.2",
+    "require": "^2.4.20"
   }
 }
