--- a/SWD/session3-1/myapp/package.json
+++ b/SWD/session3-1/myapp/package.json
@@ -3,6 +3,14 @@
   "version": "1.0.0",
   "private": true,
   "dependencies": {
-    "express": "^4.16.3"
-  }
+    "express": "^4.18.2"
+  },
+  "main": "app.js",
+  "scripts": {
+    "test": "echo \"Error: no test specified\" && exit 1"
+  },
+  "author": "",
+  "license": "ISC",
+  "devDependencies": {},
+  "description": ""
 }
