--- a/SWD/session3-2/assignment_unit_3d/package.json
+++ b/SWD/session3-2/assignment_unit_3d/package.json
@@ -17,6 +17,7 @@
     "body-parser": "^1.18.3",
     "clone-deep": "^4.0.0",
     "express": "^4.16.3",
+    "express-session": "^1.17.3",
     "node-fetch": "^2.2.0"
   }
 }
